fix: dark mode issue

--- a/src/components/playlist/playlistModal.css
+++ b/src/components/playlist/playlistModal.css
@@ -12,7 +12,7 @@
     z-index: 10;
 }
 .model-content{
-    background-color: aliceblue;
+    background-color: var(--white-color);
     width: fit-content;
 }
 
@@ -35,6 +35,7 @@
     top: 70%;
     z-index: 3;
     background-color: rgba(0, 0, 0, 0.873);
+    color: var(--white-color);
 }
 .playlist-delete{
     position: absolute;
